kubernetes/doc-home-cluster/apps/media/plex/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: plex
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: plex
  ingress:
    # plex-addons
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex-auto-languages
        - matchLabels:
            app.kubernetes.io/name: plex-image-cleanup
        - matchLabels:
            app.kubernetes.io/name: plex-trakt-sync
        - matchLabels:
            app.kubernetes.io/name: tautulli
        - matchLabels:
            app.kubernetes.io/name: notifiarr
            k8s:io.kubernetes.pod.namespace: downloads
        - matchLabels:
            app.kubernetes.io/name: home-assistant
            k8s:io.kubernetes.pod.namespace: home-automation
      toPorts:
        - ports:
            - port: "32400"
              protocol: TCP
